--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "fs-promise": "^0.5.0",
     "inquirer": "^1.1.2",
     "q": "^1.4.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "eslint": "^3.4.0",
+    "eslint-config-standard": "^6.0.0",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-standard": "^2.0.0"
   }
 }
