--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -191,7 +191,7 @@
         "one-var-declaration-per-line": "error",
         "operator-assignment": "error",
         "operator-linebreak": "error",
-        "padded-blocks": "error",
+        "padded-blocks": "off",
         "prefer-arrow-callback": "error",
         "prefer-const": "off",
         "prefer-reflect": "error",
