--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "fs-promise": "^0.5.0",
     "inquirer": "^1.1.2",
-    "mustache": "^2.2.1",
+    "lodash": "^4.15.0",
     "q": "^1.4.1"
   },
   "devDependencies": {
