--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -185,7 +185,7 @@
         "no-with": "error",
         "object-curly-newline": "error",
         "object-curly-spacing": "error",
-        "object-property-newline": "error",
+        "object-property-newline": "off",
         "object-shorthand": "error",
         "one-var": "off",
         "one-var-declaration-per-line": "error",
@@ -209,7 +209,7 @@
         "semi": "off",
         "semi-spacing": "error",
         "sort-imports": "error",
-        "sort-keys": "error",
+        "sort-keys": "off",
         "sort-vars": "off",
         "space-before-blocks": "error",
         "space-before-function-paren": "error",
