--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -196,10 +196,7 @@
         "prefer-spread": "error",
         "prefer-template": "error",
         "quote-props": "off",
-        "quotes": [
-            "error",
-            "single"
-        ],
+        "quotes": "off",
         "radix": "error",
         "require-jsdoc": "error",
         "rest-spread-spacing": "error",
